quick spacing fixes and structure reversions

--- a/static/src/css/output.css
+++ b/static/src/css/output.css
@@ -638,6 +638,10 @@ video {
   margin-top: 1rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .block {
   display: block;
 }
